syntax = 'proto3';
option go_package="zinx/proto";

package proto.gametake.v1;

message GametakeRequest {
  string id = 1;
}

message GametakeResponse {
  repeated Card cards = 1;
}

message Card {
  string type = 1;
  string color = 2;
}


message RecommendGameTakeRequest{
  repeated Card cards = 1;
}

message RecommendGameTakeResponse{
  repeated RecommendedGameTake available_takes = 1;
}

message flag {
  string name = 1;
}

message RecommendedGameTake {
  string take = 1;
  repeated flag flags = 2;
}

service GameTakeLearning {
  rpc GetHand(GametakeRequest) returns (GametakeResponse);
  rpc RecommendGameTake(RecommendGameTakeRequest) returns (RecommendGameTakeRequest);
}
